--- a/0_Document/STM32H7/STM32H7.ioc
+++ b/0_Document/STM32H7/STM32H7.ioc
@@ -34,26 +34,27 @@ Mcu.Name=STM32H7A3R(G-I)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
-Mcu.Pin10=PA13
-Mcu.Pin11=PA14
-Mcu.Pin12=PA15
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PB3
-Mcu.Pin16=PB4
-Mcu.Pin17=PB6
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA12
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PA15
+Mcu.Pin14=PC10
+Mcu.Pin15=PC11
+Mcu.Pin16=PB3
+Mcu.Pin17=PB4
+Mcu.Pin18=PB6
+Mcu.Pin19=PB7
 Mcu.Pin2=PA5
-Mcu.Pin20=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_HS
 Mcu.Pin3=PA6
 Mcu.Pin4=PA7
 Mcu.Pin5=PC4
 Mcu.Pin6=PB14
 Mcu.Pin7=PB15
-Mcu.Pin8=PA11
-Mcu.Pin9=PA12
-Mcu.PinsNb=21
+Mcu.Pin8=PA9
+Mcu.Pin9=PA11
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H7A3RGTx
@@ -91,6 +92,8 @@ PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA9.Mode=Activate_VBUS_FS
+PA9.Signal=USB_OTG_HS_VBUS
 PB14.Mode=Asynchronous
 PB14.Signal=USART1_TX
 PB15.Mode=Asynchronous
@@ -138,7 +141,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.50
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=129000000
 RCC.AHB12Freq_Value=280000000
 RCC.AHB4Freq_Value=280000000
